--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,6 @@
-image:
-  file: .gitpod.Dockerfile
-
 tasks:
-  - init: echo "welcome"
-    command: npm i && npm run deploy && npm run start
-
+  - init: npm dev
+    command: npm run dev
 ports:
   - port: 1234
     onOpen: open-browser
