--- a/contract/package.json
+++ b/contract/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "contract",
+  "name": "hello_near",
   "version": "1.0.0",
   "license": "(MIT AND Apache-2.0)",
   "type": "module",
   "scripts": {
     "build": "./build.sh",
     "deploy": "./deploy.sh",
-    "test": "echo no unit testing"
+    "test": "echo use integration-tests"
   },
   "dependencies": {
     "near-cli": "^3.4.0",
-    "near-sdk-js": "1.0.0"
+    "near-sdk-js": "0.7.0"
   },
   "devDependencies": {
-    "typescript": "^4.8.4",
+    "typescript": "^4.7.4",
     "ts-morph": "^16.0.0"
   }
 }
