--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,24 +7,48 @@
     "build": "parcel build index.html --public-url ./"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
-    "events": "^3.3.0",
-    "nodemon": "^2.0.16",
-    "parcel": "^2.7.0",
-    "process": "^0.11.10"
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@types/node": "^18.13.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
+    "nodemon": "^2.0.20",
+    "parcel": "^2.8.3",
+    "process": "^0.11.10",
+    "env-cmd": "^10.1.0"
   },
   "dependencies": {
-    "@near-wallet-selector/core": "^7.0.0",
-    "@near-wallet-selector/ledger": "^7.0.0",
-    "@near-wallet-selector/math-wallet": "^7.0.0",
-    "@near-wallet-selector/meteor-wallet": "^7.0.0",
-    "@near-wallet-selector/modal-ui": "^7.0.0",
-    "@near-wallet-selector/my-near-wallet": "^7.0.0",
-    "@near-wallet-selector/near-wallet": "^7.0.0",
-    "@near-wallet-selector/nightly": "^7.0.0",
-    "@near-wallet-selector/nightly-connect": "^7.0.0",
-    "@near-wallet-selector/sender": "^7.0.0",
-    "@near-wallet-selector/wallet-connect": "^7.0.0",
-    "near-api-js": "^0.44.2"
+    "near-api-js": "^1.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "regenerator-runtime": "^0.13.11",
+    "@near-wallet-selector/core": "^7.8.0",
+    "@near-wallet-selector/ledger": "^7.8.0",
+    "@near-wallet-selector/math-wallet": "^7.8.0",
+    "@near-wallet-selector/meteor-wallet": "^7.8.0",
+    "@near-wallet-selector/modal-ui": "^7.8.0",
+    "@near-wallet-selector/my-near-wallet": "^7.8.0",
+    "@near-wallet-selector/near-wallet": "^7.8.0",
+    "@near-wallet-selector/nightly": "^7.8.0",
+    "@near-wallet-selector/nightly-connect": "^7.8.0",
+    "@near-wallet-selector/sender": "^7.8.0",
+    "@near-wallet-selector/wallet-connect": "^7.8.0"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
